# halo

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml  macos-linux_ci.yml
cmake/: DuckDB.cmake  Velox.cmake
cmake/modules/: FindLinker.cmake  Findgflags.cmake
cmake/patches/: duckdb.patch  velox.patch
scripts/: code_clang_coverage.sh  code_clang_format_tidy.sh  collect_zstd_diagnostics.sh  generate_duckdb_patch.sh  generate_velox_patch.sh  upgrade_thirdparty.sh
src/: CMakeLists.txt  main.cpp  test_sample.cpp
src/common/base/: CMakeLists.txt  Status.cpp  Status.cppm  Status.h  StatusOr.cppm  StatusOr.h  common.cppm
test/: CMakeLists.txt  test_abseil.cpp
test/common/base/: CMakeLists.txt  test_status.cpp  test_status_or.cpp
